# monitor_microservice

./: Dockerfile  README.md  compose.test.yml  pyproject.toml  sonar-project.properties
app/: main.py
app/api/: __init__.py  auth_deps.py  dmo.py  google_trends.py  monitor.py  offer.py  payment.py  provider.py
app/core/: config.py
app/db/: init_db.py
app/rabbitmq/: handler.py
app/tests/: conftest.py
